fix: touch up some wording and styles to prevent cut off text

--- a/public/resume.scss
+++ b/public/resume.scss
@@ -185,6 +185,7 @@ footer {
   :root {
     color: black;
     background: transparent;
+    margin: 0 0.25em;
   }
   main {
     column-count: 2;
